crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__operations-8.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"a < b;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 6,
                    },
                },
                span: 0..6,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 5,
                            },
                        },
                        span: 0..5,
                        kind: BinaryExpr(
                            BinaryExpr {
                                op: Lt,
                                left: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 1,
                                        },
                                    },
                                    span: 0..1,
                                    kind: Ident(
                                        Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                            },
                                            span: 0..1,
                                            name: "a",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                right: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                    span: 4..5,
                                    kind: Ident(
                                        Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 4,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                            },
                                            span: 4..5,
                                            name: "b",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
