crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__strings-3.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"\\\"line 1\\\\nline 2\\\\nline 3\\\";\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 25,
                    },
                },
                span: 0..25,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 24,
                            },
                        },
                        span: 0..24,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 24,
                                        },
                                    },
                                    span: 0..24,
                                    value: "line 1\nline 2\nline 3",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
